Agregado nuevo informe cuantitativo de resultados

--- a/config/menu/default/informes.yml
+++ b/config/menu/default/informes.yml
@@ -5,3 +5,5 @@
     :url: admin_survey_results_path
   - :label: Comentarios
     :url: admin_survey_comments_path
+  - :label: Resultados Totales
+    :url: quantitative_result_admin_survey_results_path
